--- a/museum.html
+++ b/museum.html
@@ -51,6 +51,7 @@
         <img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308845458549899314/WhatsApp_Image_2024-10-26_at_19.04.24_5b6904a8.jpg?ex=673f6cd2&is=673e1b52&hm=3f1b9e3ad9ad619f4ead94441e910a2f17d7d7954c413ffa5af10b99f1a9c173&" alt="Friend 3">
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308846633781432499/Screenshot_2024-11-20_192807.png?ex=673f6dea&is=673e1c6a&hm=4ba53c07e4bf0163e4910296a0c72359a07be6c1aa54eab4fc83c213f2f8ba25&" alt-"friend 4">
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308846659337453598/Screenshot_2024-11-20_192734.png?ex=673f6df0&is=673e1c70&hm=9d6691939361e588bd754fb4aa742d724bfa5724bdbcbfa40ac296ece0603722&" alt-"friend 5">
+	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308846688613564536/Screenshot_2024-11-20_192815.png?ex=673f6df7&is=673e1c77&hm=5faa9f24a01ceab48d4afa0cbc43750821c51891c53fba4002f5d8253d702e94&" alt-"friend 6">    
     </div>
     <footer>
         &copy; 2024 My Friends' Gallery
