--- a/museum.html
+++ b/museum.html
@@ -55,7 +55,9 @@
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308851667843940372/Screenshot_2024-11-20_194823.png?ex=673f729a&is=673e211a&hm=32ec25e4ee6b330532749199d06d124cceecb182dd8485681cbe41f1ca0b4afd&" alt-"friend 7">
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308852405470888048/Screenshot_2024-11-20_192855.png?ex=673f734a&is=673e21ca&hm=57a1dce064630d0defa1b6f7eebb29f03c1c48c98e3fb58eb2554af52e021dc0&" alt-"friend 8">
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308852355869179986/Screenshot_2024-11-20_192607.png?ex=673f733e&is=673e21be&hm=a3a2497242c7a54ce3282f5cd680de273a8b9a636ea083cbc17e84b9410d1b3b&" alt-"friend 9">
-	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308846734285340793/Screenshot_2024-11-20_192835.png?ex=673f6e02&is=673e1c82&hm=74fdaf8b86da596f0f6177e493a4293dd25f7aecdf85602557208f08e4d2b7f5&" alt-"friend 10">    
+	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308846734285340793/Screenshot_2024-11-20_192835.png?ex=673f6e02&is=673e1c82&hm=74fdaf8b86da596f0f6177e493a4293dd25f7aecdf85602557208f08e4d2b7f5&" alt-"friend 10">
+	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308854243029155971/Screenshot_2024-11-20_195357.png?ex=673f7500&is=673e2380&hm=77266f3520465e3c663c50d45b6e529c9086fa7f3b7cb9f083e1bb89a91a9fef&" alt-"friend 11">
+	<img src="" alt-"friend ">    
     </div>
     <footer>
         &copy; 2024 My Friends' Gallery
