--- a/museum.html
+++ b/museum.html
@@ -60,6 +60,11 @@
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308852316375482499/Screenshot_2024-11-20_192618.png?ex=673f7335&is=673e21b5&hm=01bc109879a566e32c35be1a473a8e6dbe14edadcd36df9d0547e3525d86f70b&" alt-"friend 12">
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308855719637942364/Screenshot_2024-11-20_192801.png?ex=673f7660&is=673e24e0&hm=067432a8d04ae6b9f54e62634b9c6226e22ff385a2def8081c5a9eeb819a1876&" alt-"friend 13">    
     </div>
+	<audio controls>
+    <source src="https://archive.org/download/jazz_song_example/jazz_example.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
     <footer>
         &copy; 2024 My Friends' Gallery
     </footer>
