--- a/museum.html
+++ b/museum.html
@@ -61,7 +61,7 @@
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308855719637942364/Screenshot_2024-11-20_192801.png?ex=673f7660&is=673e24e0&hm=067432a8d04ae6b9f54e62634b9c6226e22ff385a2def8081c5a9eeb819a1876&" alt-"friend 13">    
     </div>
 	<audio controls>
-    <source src="https://archive.org/download/jazz_song_example/jazz_example.mp3" type="audio/mpeg">
+    <source src="https://www.youtube.com/watch?v=SYpaxY3WZfM" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
