--- a/museum.html
+++ b/museum.html
@@ -61,7 +61,7 @@
 	<img src="https://cdn.discordapp.com/attachments/1029750899758862387/1308855719637942364/Screenshot_2024-11-20_192801.png?ex=673f7660&is=673e24e0&hm=067432a8d04ae6b9f54e62634b9c6226e22ff385a2def8081c5a9eeb819a1876&" alt-"friend 13">    
     </div>
 	<audio controls>
-    <source src="https://soundcloud.com/fireexpwhereyouat/fuck-all-yall-fr?si=b8978c50ec8c48ee969df94a46e8b3ca&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mpeg">
+    <source src="https://soundcloud.com/fireexpwhereyouat/fuck-all-yall-fr?si=b8978c50ec8c48ee969df94a46e8b3ca&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
 </audio>
 
